--- a/gitops/apps/home-assistant/configuration/dashboards/room_schedule_configuration.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/room_schedule_configuration.yaml
@@ -35,6 +35,8 @@ views:
                   - entity: input_boolean.bedroom_morning_custom_time
                   - entity: input_datetime.bedroom_s1_start
                   - entity: input_select.bedroom_morning_scene
+                  - entity: input_boolean.enable_bedroom_morning
+                  - entity: input_boolean.auto_on_bedroom_morning
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -51,6 +53,8 @@ views:
                   - entity: input_boolean.living_room_morning_custom_time
                   - entity: input_datetime.living_room_s1_start
                   - entity: input_select.living_room_morning_scene
+                  - entity: input_boolean.enable_living_room_morning
+                  - entity: input_boolean.auto_on_living_room_morning
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -67,6 +71,8 @@ views:
                   - entity: input_boolean.kitchen_morning_custom_time
                   - entity: input_datetime.kitchen_s1_start
                   - entity: input_select.kitchen_morning_scene
+                  - entity: input_boolean.enable_kitchen_morning
+                  - entity: input_boolean.auto_on_kitchen_morning
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -83,6 +89,8 @@ views:
                   - entity: input_boolean.bathroom_morning_custom_time
                   - entity: input_datetime.bathroom_s1_start
                   - entity: input_select.bathroom_morning_scene
+                  - entity: input_boolean.enable_bathroom_morning
+                  - entity: input_boolean.auto_on_bathroom_morning
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -99,6 +107,8 @@ views:
                   - entity: input_boolean.hallway_morning_custom_time
                   - entity: input_datetime.hallway_s1_start
                   - entity: input_select.hallway_morning_scene
+                  - entity: input_boolean.enable_hallway_morning
+                  - entity: input_boolean.auto_on_hallway_morning
 
           # Day Schedule Configuration
           - type: conditional
@@ -117,6 +127,8 @@ views:
                   - entity: input_boolean.bedroom_day_custom_time
                   - entity: input_datetime.bedroom_s2_start
                   - entity: input_select.bedroom_day_scene
+                  - entity: input_boolean.enable_bedroom_day
+                  - entity: input_boolean.auto_on_bedroom_day
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -133,6 +145,8 @@ views:
                   - entity: input_boolean.living_room_day_custom_time
                   - entity: input_datetime.living_room_s2_start
                   - entity: input_select.living_room_day_scene
+                  - entity: input_boolean.enable_living_room_day
+                  - entity: input_boolean.auto_on_living_room_day
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -149,6 +163,8 @@ views:
                   - entity: input_boolean.kitchen_day_custom_time
                   - entity: input_datetime.kitchen_s2_start
                   - entity: input_select.kitchen_day_scene
+                  - entity: input_boolean.enable_kitchen_day
+                  - entity: input_boolean.auto_on_kitchen_day
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -165,6 +181,8 @@ views:
                   - entity: input_boolean.bathroom_day_custom_time
                   - entity: input_datetime.bathroom_s2_start
                   - entity: input_select.bathroom_day_scene
+                  - entity: input_boolean.enable_bathroom_day
+                  - entity: input_boolean.auto_on_bathroom_day
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -181,6 +199,8 @@ views:
                   - entity: input_boolean.hallway_day_custom_time
                   - entity: input_datetime.hallway_s2_start
                   - entity: input_select.hallway_day_scene
+                  - entity: input_boolean.enable_hallway_day
+                  - entity: input_boolean.auto_on_hallway_day
 
           # Evening Schedule Configuration
           - type: conditional
@@ -199,6 +219,8 @@ views:
                   - entity: input_boolean.bedroom_evening_custom_time
                   - entity: input_datetime.bedroom_s3_start
                   - entity: input_select.bedroom_evening_scene
+                  - entity: input_boolean.enable_bedroom_evening
+                  - entity: input_boolean.auto_on_bedroom_evening
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -215,6 +237,8 @@ views:
                   - entity: input_boolean.living_room_evening_custom_time
                   - entity: input_datetime.living_room_s3_start
                   - entity: input_select.living_room_evening_scene
+                  - entity: input_boolean.enable_living_room_evening
+                  - entity: input_boolean.auto_on_living_room_evening
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -231,6 +255,8 @@ views:
                   - entity: input_boolean.kitchen_evening_custom_time
                   - entity: input_datetime.kitchen_s3_start
                   - entity: input_select.kitchen_evening_scene
+                  - entity: input_boolean.enable_kitchen_evening
+                  - entity: input_boolean.auto_on_kitchen_evening
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -247,6 +273,8 @@ views:
                   - entity: input_boolean.bathroom_evening_custom_time
                   - entity: input_datetime.bathroom_s3_start
                   - entity: input_select.bathroom_evening_scene
+                  - entity: input_boolean.enable_bathroom_evening
+                  - entity: input_boolean.auto_on_bathroom_evening
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -263,6 +291,8 @@ views:
                   - entity: input_boolean.hallway_evening_custom_time
                   - entity: input_datetime.hallway_s3_start
                   - entity: input_select.hallway_evening_scene
+                  - entity: input_boolean.enable_hallway_evening
+                  - entity: input_boolean.auto_on_hallway_evening
 
           # Night Schedule Configuration
           - type: conditional
@@ -281,6 +311,8 @@ views:
                   - entity: input_boolean.bedroom_night_custom_time
                   - entity: input_datetime.bedroom_s4_start
                   - entity: input_select.bedroom_night_scene
+                  - entity: input_boolean.enable_bedroom_night
+                  - entity: input_boolean.auto_on_bedroom_night
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -297,6 +329,8 @@ views:
                   - entity: input_boolean.living_room_night_custom_time
                   - entity: input_datetime.living_room_s4_start
                   - entity: input_select.living_room_night_scene
+                  - entity: input_boolean.enable_living_room_night
+                  - entity: input_boolean.auto_on_living_room_night
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -313,6 +347,8 @@ views:
                   - entity: input_boolean.kitchen_night_custom_time
                   - entity: input_datetime.kitchen_s4_start
                   - entity: input_select.kitchen_night_scene
+                  - entity: input_boolean.enable_kitchen_night
+                  - entity: input_boolean.auto_on_kitchen_night
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -329,6 +365,8 @@ views:
                   - entity: input_boolean.bathroom_night_custom_time
                   - entity: input_datetime.bathroom_s4_start
                   - entity: input_select.bathroom_night_scene
+                  - entity: input_boolean.enable_bathroom_night
+                  - entity: input_boolean.auto_on_bathroom_night
           - type: conditional
             conditions:
               - entity: input_select.time_window_selector
@@ -345,3 +383,5 @@ views:
                   - entity: input_boolean.hallway_night_custom_time
                   - entity: input_datetime.hallway_s4_start
                   - entity: input_select.hallway_night_scene
+                  - entity: input_boolean.enable_hallway_night
+                  - entity: input_boolean.auto_on_hallway_night
