--- a/gitops/apps/home-assistant/configuration/dashboards/room_schedule_viewer.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/room_schedule_viewer.yaml
@@ -381,12 +381,22 @@ views:
             {% set evening_scene = evening_override if evening_override not in ['unknown', 'unavailable', ''] else 'scene.' ~ room ~ '_evening' %}
             {% set night_scene = night_override if night_override not in ['unknown', 'unavailable', ''] else 'scene.' ~ room ~ '_night' %}
             
-            | Time Slot | Scene | Activation Time |
-            |-----------|-------|----------------|
-            | Morning | `{{ morning_scene }}` | {{ s1 }} |
-            | Day | `{{ day_scene }}` | {{ s2 }} |
-            | Evening | `{{ evening_scene }}` | {{ s3 }} |
-            | Night | `{{ night_scene }}` | {{ s4 }} |
+            {% set morning_enabled = states('input_boolean.enable_' ~ room ~ '_morning') %}
+            {% set day_enabled = states('input_boolean.enable_' ~ room ~ '_day') %}
+            {% set evening_enabled = states('input_boolean.enable_' ~ room ~ '_evening') %}
+            {% set night_enabled = states('input_boolean.enable_' ~ room ~ '_night') %}
+            
+            {% set morning_auto_on = states('input_boolean.auto_on_' ~ room ~ '_morning') %}
+            {% set day_auto_on = states('input_boolean.auto_on_' ~ room ~ '_day') %}
+            {% set evening_auto_on = states('input_boolean.auto_on_' ~ room ~ '_evening') %}
+            {% set night_auto_on = states('input_boolean.auto_on_' ~ room ~ '_night') %}
+            
+            | Time Slot | Scene | Activation Time | Timer Enabled | Auto-On |
+            |-----------|-------|----------------|---------------|---------|
+            | Morning | `{{ morning_scene }}` | {{ s1 }} | {% if morning_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if morning_auto_on == 'on' %}✓{% else %}✗{% endif %} |
+            | Day | `{{ day_scene }}` | {{ s2 }} | {% if day_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if day_auto_on == 'on' %}✓{% else %}✗{% endif %} |
+            | Evening | `{{ evening_scene }}` | {{ s3 }} | {% if evening_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if evening_auto_on == 'on' %}✓{% else %}✗{% endif %} |
+            | Night | `{{ night_scene }}` | {{ s4 }} | {% if night_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if night_auto_on == 'on' %}✓{% else %}✗{% endif %} |
             
             {% set any_custom = morning_custom == 'on' or day_custom == 'on' or evening_custom == 'on' or night_custom == 'on' %}
             {% if any_custom %}
