--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -817,32 +817,40 @@ data:
     
       # Check per-time-window custom times
       morning_custom: >-
-        {% if 'input_boolean.' ~ room_key_var ~ '_morning_custom_time' in states %}
-          {{ is_state('input_boolean.' ~ room_key_var ~ '_morning_custom_time', 'on') }}
+        {% set helper = 'input_boolean.' ~ room_key_var ~ '_morning_custom_time' %}
+        {% set state_val = states(helper) %}
+        {% if state_val not in ['unknown', 'unavailable', None, ''] %}
+          {{ is_state(helper, 'on') }}
         {% elif custom_schedule_enabled_input is not none and custom_schedule_enabled_input != '' %}
           {{ is_state(custom_schedule_enabled_input, 'on') }}
         {% else %}
           {{ false }}
         {% endif %}
       day_custom: >-
-        {% if 'input_boolean.' ~ room_key_var ~ '_day_custom_time' in states %}
-          {{ is_state('input_boolean.' ~ room_key_var ~ '_day_custom_time', 'on') }}
+        {% set helper = 'input_boolean.' ~ room_key_var ~ '_day_custom_time' %}
+        {% set state_val = states(helper) %}
+        {% if state_val not in ['unknown', 'unavailable', None, ''] %}
+          {{ is_state(helper, 'on') }}
         {% elif custom_schedule_enabled_input is not none and custom_schedule_enabled_input != '' %}
           {{ is_state(custom_schedule_enabled_input, 'on') }}
         {% else %}
           {{ false }}
         {% endif %}
       evening_custom: >-
-        {% if 'input_boolean.' ~ room_key_var ~ '_evening_custom_time' in states %}
-          {{ is_state('input_boolean.' ~ room_key_var ~ '_evening_custom_time', 'on') }}
+        {% set helper = 'input_boolean.' ~ room_key_var ~ '_evening_custom_time' %}
+        {% set state_val = states(helper) %}
+        {% if state_val not in ['unknown', 'unavailable', None, ''] %}
+          {{ is_state(helper, 'on') }}
         {% elif custom_schedule_enabled_input is not none and custom_schedule_enabled_input != '' %}
           {{ is_state(custom_schedule_enabled_input, 'on') }}
         {% else %}
           {{ false }}
         {% endif %}
       night_custom: >-
-        {% if 'input_boolean.' ~ room_key_var ~ '_night_custom_time' in states %}
-          {{ is_state('input_boolean.' ~ room_key_var ~ '_night_custom_time', 'on') }}
+        {% set helper = 'input_boolean.' ~ room_key_var ~ '_night_custom_time' %}
+        {% set state_val = states(helper) %}
+        {% if state_val not in ['unknown', 'unavailable', None, ''] %}
+          {{ is_state(helper, 'on') }}
         {% elif custom_schedule_enabled_input is not none and custom_schedule_enabled_input != '' %}
           {{ is_state(custom_schedule_enabled_input, 'on') }}
         {% else %}
@@ -976,6 +984,7 @@ data:
       # Evaluate every minute; if it matches any boundary, the action will run
       - platform: "time_pattern"
         minutes: "/1"
+        id: "timer_check"
     
     action:
       - variables:
@@ -983,13 +992,13 @@ data:
             {% set targets = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
             {{ expand(targets) | selectattr('state','eq','on') | list | count > 0 if targets else false }}
     
-      # Debug logging
+      # Debug logging - this should appear every minute if automation is running
       - service: "logbook.log"
         data:
           name: "room_timer_control"
           message: >-
-            DEBUG: now_hm={{ now_hm }}, s1={{ s1 }}, s2={{ s2 }}, s3={{ s3 }}, s4={{ s4 }},
-            fired_slot={{ fired_slot }}, en_night={{ en_night }}, ao_night={{ ao_night }}, any_on={{ any_on }}
+            [{{ room_key_var }}] Time={{ now_hm }}, Slots: s1={{ s1 }}, s2={{ s2 }}, s3={{ s3 }}, s4={{ s4 }},
+            fired={{ fired_slot }}, en_night={{ en_night }}, ao_night={{ ao_night }}, lights_on={{ any_on }}
     
       - choose:
           - conditions: "{{ fired_slot == 'morning' and en_morning | bool }}"
