--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -1006,42 +1006,57 @@ data:
               - choose:
                   - conditions: "{{ any_on or ao_morning | bool }}"
                     sequence:
+                      - variables:
+                          script_data_dict: >-
+                            {% set d = {'room_key': room_key_var} %}
+                            {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
+                            {% set _ = d.update({'fallback_lights': fb}) %}
+                            {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set _ = d.update({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
+                            {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set _ = d.update({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
+                            {% if custom_s2_start_input and custom_s2_start_input != '' and custom_s2_start_input is not none %}{% set _ = d.update({'custom_s2_start': custom_s2_start_input}) %}{% endif %}
+                            {% if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none %}{% set _ = d.update({'custom_s3_start': custom_s3_start_input}) %}{% endif %}
+                            {% if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none %}{% set _ = d.update({'custom_s4_start': custom_s4_start_input}) %}{% endif %}
+                            {{ d }}
                       - service: "script.scheduled_light_on"
-                        data:
-                          room_key: !input room_key
-                          custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
-                          custom_s1_start: "{{ custom_s1_start_input }}"
-                          custom_s2_start: "{{ custom_s2_start_input }}"
-                          custom_s3_start: "{{ custom_s3_start_input }}"
-                          custom_s4_start: "{{ custom_s4_start_input }}"
+                        data: "{{ script_data_dict }}"
     
           - conditions: "{{ fired_slot == 'day' and en_day | bool }}"
             sequence:
               - choose:
                   - conditions: "{{ any_on or ao_day | bool }}"
                     sequence:
+                      - variables:
+                          script_data_dict: >-
+                            {% set d = {'room_key': room_key_var} %}
+                            {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
+                            {% set _ = d.update({'fallback_lights': fb}) %}
+                            {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set _ = d.update({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
+                            {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set _ = d.update({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
+                            {% if custom_s2_start_input and custom_s2_start_input != '' and custom_s2_start_input is not none %}{% set _ = d.update({'custom_s2_start': custom_s2_start_input}) %}{% endif %}
+                            {% if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none %}{% set _ = d.update({'custom_s3_start': custom_s3_start_input}) %}{% endif %}
+                            {% if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none %}{% set _ = d.update({'custom_s4_start': custom_s4_start_input}) %}{% endif %}
+                            {{ d }}
                       - service: "script.scheduled_light_on"
-                        data:
-                          room_key: !input room_key
-                          custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
-                          custom_s1_start: "{{ custom_s1_start_input }}"
-                          custom_s2_start: "{{ custom_s2_start_input }}"
-                          custom_s3_start: "{{ custom_s3_start_input }}"
-                          custom_s4_start: "{{ custom_s4_start_input }}"
+                        data: "{{ script_data_dict }}"
     
           - conditions: "{{ fired_slot == 'evening' and en_evening | bool }}"
             sequence:
               - choose:
                   - conditions: "{{ any_on or ao_evening | bool }}"
                     sequence:
+                      - variables:
+                          script_data_dict: >-
+                            {% set d = {'room_key': room_key_var} %}
+                            {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
+                            {% set _ = d.update({'fallback_lights': fb}) %}
+                            {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set _ = d.update({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
+                            {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set _ = d.update({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
+                            {% if custom_s2_start_input and custom_s2_start_input != '' and custom_s2_start_input is not none %}{% set _ = d.update({'custom_s2_start': custom_s2_start_input}) %}{% endif %}
+                            {% if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none %}{% set _ = d.update({'custom_s3_start': custom_s3_start_input}) %}{% endif %}
+                            {% if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none %}{% set _ = d.update({'custom_s4_start': custom_s4_start_input}) %}{% endif %}
+                            {{ d }}
                       - service: "script.scheduled_light_on"
-                        data:
-                          room_key: !input room_key
-                          custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
-                          custom_s1_start: "{{ custom_s1_start_input }}"
-                          custom_s2_start: "{{ custom_s2_start_input }}"
-                          custom_s3_start: "{{ custom_s3_start_input }}"
-                          custom_s4_start: "{{ custom_s4_start_input }}"
+                        data: "{{ script_data_dict }}"
     
           - conditions: "{{ fired_slot == 'night' and en_night | bool }}"
             sequence:
@@ -1058,14 +1073,19 @@ data:
                           name: "room_timer_control"
                           message: >-
                             Firing night scene for room {{ room_key_var }}
+                      - variables:
+                          script_data_dict: >-
+                            {% set d = {'room_key': room_key_var} %}
+                            {% set fb = target_lights_var.entity_id if target_lights_var is mapping else target_lights_var %}
+                            {% set _ = d.update({'fallback_lights': fb}) %}
+                            {% if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none %}{% set _ = d.update({'custom_schedule_enabled': custom_schedule_enabled_input}) %}{% endif %}
+                            {% if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none %}{% set _ = d.update({'custom_s1_start': custom_s1_start_input}) %}{% endif %}
+                            {% if custom_s2_start_input and custom_s2_start_input != '' and custom_s2_start_input is not none %}{% set _ = d.update({'custom_s2_start': custom_s2_start_input}) %}{% endif %}
+                            {% if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none %}{% set _ = d.update({'custom_s3_start': custom_s3_start_input}) %}{% endif %}
+                            {% if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none %}{% set _ = d.update({'custom_s4_start': custom_s4_start_input}) %}{% endif %}
+                            {{ d }}
                       - service: "script.scheduled_light_on"
-                        data:
-                          room_key: !input room_key
-                          custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
-                          custom_s1_start: "{{ custom_s1_start_input }}"
-                          custom_s2_start: "{{ custom_s2_start_input }}"
-                          custom_s3_start: "{{ custom_s3_start_input }}"
-                          custom_s4_start: "{{ custom_s4_start_input }}"
+                        data: "{{ script_data_dict }}"
                   - conditions: []
                     sequence:
                       - service: "logbook.log"
